manifests/presit-editor/15-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: presit-editor
  namespace: pre-sit
  labels:
    app: presit-editor
spec:
  selector:
    app: presit-editor
  ports:
  - port: 8000
    targetPort: 8000
