manifests/presit-editor/20-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: presit-editor
  namespace: pre-sit
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: presit-editor.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: presit-editor
            port:
              number: 8000
